# alfouad_int2

./: README.md  pyproject.toml
alfouad_int/: hooks.py  modules.txt
alfouad_int/alfouad/custom/: company.json  company_policy.json  customer.json  delivery_trip.json  permission_application.json  sales_team.json  supplier.json  training_feedback.json  vehicle.json  visit_form.json
alfouad_int/alfouad/doctype/apartments_management/: apartments_management.js  apartments_management.json  apartments_management.py  test_apartments_management.py
alfouad_int/alfouad/doctype/barcode_asset/: barcode_asset.js  barcode_asset.json  barcode_asset.py  test_barcode_asset.py
alfouad_int/alfouad/doctype/barcode_assets/: barcode_assets.js  barcode_assets.json  barcode_assets.py  test_barcode_assets.py
alfouad_int/alfouad/doctype/company_policy/: company_policy.js  company_policy.json  company_policy.py  test_company_policy.py
alfouad_int/alfouad/doctype/customer_complaint_form/: customer_complaint_form.js  customer_complaint_form.json  customer_complaint_form.py  test_customer_complaint_form.py
alfouad_int/alfouad/doctype/customer_satisfaction_survey/: customer_satisfaction_survey.js  customer_satisfaction_survey.json  customer_satisfaction_survey.py  test_customer_satisfaction_survey.py
alfouad_int/alfouad/doctype/dismissal_warning_form/: dismissal_warning_form.js  dismissal_warning_form.json  dismissal_warning_form.py  test_dismissal_warning_form.py
alfouad_int/alfouad/doctype/dismissal_warnings_form/: dismissal_warnings_form.js  dismissal_warnings_form.json  (+2 more)
(+82 files in other folders)
